APCS/04 Unit/12 Lesson/stacktrace
TicTacToeBoard.java:37: error: cannot find symbol
    public boolean move(String input, char mark) throws InvalidInputException, IllegalMoveException {
                                                        ^
  symbol:   class InvalidInputException
  location: class TicTacToeBoard
TicTacToeBoard.java:37: error: cannot find symbol
    public boolean move(String input, char mark) throws InvalidInputException, IllegalMoveException {
                                                                               ^
  symbol:   class IllegalMoveException
  location: class TicTacToeBoard
TicTacToeBoard.java:127: error: cannot find symbol
            throws IllegalMoveException {
                   ^
  symbol:   class IllegalMoveException
  location: class TicTacToeBoard
TicTacToeBoard.java:52: error: cannot find symbol
             throw new NullInputException();
                       ^
  symbol:   class NullInputException
  location: class TicTacToeBoard
TicTacToeBoard.java:55: error: cannot find symbol
             throw new InvalidInputException();
                       ^
  symbol:   class InvalidInputException
  location: class TicTacToeBoard
TicTacToeBoard.java:66: error: cannot find symbol
                throw new InvalidInputException();
                          ^
  symbol:   class InvalidInputException
  location: class TicTacToeBoard
TicTacToeBoard.java:72: error: cannot find symbol
                throw new InvalidInputException();              
                          ^
  symbol:   class InvalidInputException
  location: class TicTacToeBoard
TicTacToeBoard.java:92: error: cannot find symbol
            default:  throw new InvalidInputException();
                                ^
  symbol:   class InvalidInputException
  location: class TicTacToeBoard
TicTacToeBoard.java:102: error: cannot find symbol
            default:  throw new InvalidInputException();
                                ^
  symbol:   class InvalidInputException
  location: class TicTacToeBoard
9 errors
